Signed-off-by: haroldfu <haroldfu@qq.com>

--- a/common/conf/app-config.properties
+++ b/common/conf/app-config.properties
@@ -52,18 +52,18 @@ mail.daysToKeep=10
 mail.mailSenderId=mailSender_test
 
 #common database settings
-jdbc.username=root
+jdbc.username=win
 #win
 
-jdbc.password=root
-
+jdbc.password=win2009
+ 
 #win2009
 jdbc.minConnections=5
 jdbc.maxConnections=100
 #10
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/mindo?useUnicode=true&amp;characterEncoding=utf-8
-jdbc.url=jdbc:mysql://192.168.1.191:3306/mindo?useUnicode=true&amp;characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/mindo?useUnicode=true&amp;characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://192.168.1.191:3306/mindo?useUnicode=true&amp;characterEncoding=utf-8
 
 hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 
