货到付款功能更新
Signed-off-by: haroldfu <haroldfu@qq.com>

--- a/common/messages/eStore.properties
+++ b/common/messages/eStore.properties
@@ -1042,6 +1042,7 @@ salesOrder.orderStatus.toCancel=<font color='#663399'>申请取消中</font>
 salesOrder.paymentStatus_10=未支付
 salesOrder.paymentStatus_20=部分支付
 salesOrder.paymentStatus_30=已支付
+salesOrder.paymentStatus_40=货到付款
 
 salesOrder.shippingStatus_10=缺货
 salesOrder.shippingStatus_20=处理中
