Signed-off-by: 1649865412 <1649865412@qq.com>

--- a/common/conf/app-config.properties
+++ b/common/conf/app-config.properties
@@ -52,10 +52,10 @@ mail.daysToKeep=10
 mail.mailSenderId=mailSender_test
 
 #common database settings
-jdbc.username=win
+jdbc.username=root
 #win
 
-jdbc.password=win2009
+jdbc.password=root
  
 #win2009
 jdbc.minConnections=5
@@ -64,7 +64,9 @@ jdbc.maxConnections=100
 jdbc.driverClassName=com.mysql.jdbc.Driver
 
 
+
 jdbc.url=jdbc\:mysql\://192.168.1.114\:3306/mindo?useUnicode\=true&amp;characterEncoding\=utf-8
+#jdbc.url=jdbc\:mysql\://114.215.142.92\:3306/mindo?useUnicode\=true&amp;characterEncoding\=utf-8
 
 hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 
