--- a/common/messages/eStore.properties
+++ b/common/messages/eStore.properties
@@ -6,7 +6,7 @@ webapp.copyrightEnd=All rights reserved
 # -- messages used in decorators/default.jsp 
 eStore.home=首页
 eStore.TopOfPage=Top of page
-
+dimension.url =D:/Repositories/workspace/asset/assets/media/qrcode
 user.status=Logged in as\: 
 user.logout=Logout
 user.signup=Sign Up
@@ -744,7 +744,7 @@ shoppingcartItem.subtotal=小计
 shoppingcartItem.cannotUpdate_stockNotEnough=不能更新，没有足够库存。
 shoppingcartItem.cannotUpdate_noMoreInventory=缺货
 shoppingcartItem.cannotUpdate_quantityError=数量错误，请输入 0到999之间的数字。
-shoppingcartItem.error.qty.adjusted.maximun=商品名称为“ {0} ”的库存已不足 
+shoppingcartItem.error.qty.adjusted.maximun=\u5546\u54C1\u540D\u79F0\u4E3A\u201C {0} \u201D\u7684\u5E93\u5B58\u5DF2\u4E0D\u8DB3 
 shoppingcartItem.error.qty.must.max={0} (Start From {1} Units)
 #---- message
 shoppingcartItem.quantityNotNull=Please enter a valid quantity.
