Signed-off-by: haroldfu <haroldfu@qq.com>

--- a/common/messages/eStore.properties
+++ b/common/messages/eStore.properties
@@ -326,6 +326,7 @@ billingAddress.shi.address=Bill to shipping address&nbsp;(Recommended)
 customer.login=Login
 customer.logout=Logout
 customer.login.fail=用户名或密码不正确。
+customer.login.first=请先登陆。
 customer.login.title=四方街电子商务网站---注册登录页面
 customer.login.header=Login
 customer.login.logintips=Returning Customer? If you've purchased from us before, please login with your Email and password.
